--- a/app/assets/javascripts/admin/studies/specimenGroups/specimenGroupForm.html
+++ b/app/assets/javascripts/admin/studies/specimenGroups/specimenGroupForm.html
@@ -14,7 +14,7 @@
              class="form-control"
              ng-model="vm.specimenGroup.name"
              ng-minlength="2"
-             placeholder="A short name for the specimen group"
+             placeholder="A short name for the specimen"
              focus-me="true"
              required />
     </div>
@@ -33,7 +33,7 @@
                 class="form-control"
                 rows="10"
                 ng-model="vm.specimenGroup.description"
-                placeholder="A description of the specimen group (optional)" />
+                placeholder="A description of the specimen (optional)" />
     </div>
   </div>
 
