--- a/app/assets/javascripts/collection/directives/collection/collection.html
+++ b/app/assets/javascripts/collection/directives/collection/collection.html
@@ -28,7 +28,7 @@
                   get-studies="vm.updateEnabledStudies"
                   icon="glyphicon-ok-circle"
                   page-size="4"
-                  messageNoResults="No results match the criteria."
+                  message-no-results="No results match the criteria."
                   navigate-state-name="home.collection.study"
                   navigate-state-param-name="studyId">
     </select-study>
