--- a/app/assets/javascripts/collection/specimenAdd/specimenAdd.html
+++ b/app/assets/javascripts/collection/specimenAdd/specimenAdd.html
@@ -27,7 +27,7 @@
       </div>
     </div>
 
-    <!-- UNVENTORY ID -->
+    <!-- INVENTORY ID -->
     <div class="form-group row"
          ng-class="{ 'has-error' : form.inventoryId.$invalid && !form.inventoryId.$pristine }">
       <label for="inventoryId" class="col-md-3 form-control-label">Inventory ID</label>
@@ -119,7 +119,7 @@
       </div>
     </div>
 
-    <!-- CENTRE LOCATIONS "-->
+    <!-- CENTRE LOCATION -->
     <div class="form-group row"
          ng-class="{ 'has-error' : form.centre.$invalid && !form.centre.$pristine }">
       <label class="col-md-3 form-control-label">Collection centre</label>
