Fix for bugs introduced in previous commits

--- a/app/assets/javascripts/admin/directives/locationAdd/locationAdd.html
+++ b/app/assets/javascripts/admin/directives/locationAdd/locationAdd.html
@@ -42,7 +42,7 @@
 
   <!-- CITY -->
   <div class="form-group">
-    <label for="city" class="col-md- form-control-label">City</label>
+    <label for="city" class="col-md-2 form-control-label">City</label>
     <div class="col-md-10">
       <input
          name="city"
