Added REST API that gets centres linked to a study

--- a/app/assets/javascripts/collection/directives/ceventView/ceventView.html
+++ b/app/assets/javascripts/collection/directives/ceventView/ceventView.html
@@ -76,4 +76,7 @@
   </div>
 </div>
 
-<cevent-specimens-view collection-event="vm.collectionEvent"></cevent-specimens-view>
+<cevent-specimens-view
+   study="vm.study"
+   collection-event="vm.collectionEvent">
+</cevent-specimens-view>
